--- a/src/components/sass/_loadingScreen.scss
+++ b/src/components/sass/_loadingScreen.scss
@@ -15,31 +15,8 @@
     @include centerItems;
     @include Maxsize100;
 
-    .LoadingScreenCircle {
-      @include MediumGreen;
-      border: black solid 4px;
-      border-radius: 90%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 20vw;
-      min-height: 150px;
-      max-height: 200px;
-      width: 20vw;
-      max-width: 200px;
-      min-width: 150px;
-
-      h1 {
-        -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: black;
-      }
-
-      h2 {
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        bottom: 10%;
-      }
+    .truck {
+      animation: animate2 3s linear infinite;
     }
   }
   button {
@@ -93,5 +70,13 @@
   }
   to {
     transform: rotate(359deg);
+  }
+}
+@keyframes animate2 {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(20px);
   }
 }
